ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
      - host: NAMESPACE.orangebitsindia.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: oragebitdemo1-NAMESPACE-oragne-bit-demo
                  port:
                    number: 80
              path: /demo1/NAMESPACE1
